--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,59 +1,142 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto',sans-serif;
 
-/* ***************************************************** */
+}
+body{
+  background-color: black;
+  /* background:  url(https://www.gstatic.com/earth/social/00_generic_facebook-001.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; */
+
+}
+
+.img{
+  height: 100vh;
+  width: 200vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading{
+  
+  color: #fff;
+  text-align: center;
+  margin-top: 25vh;
+  font-size: 4em;
+}
+.text{
+  color: rgb(255, 255, 255);
+  margin-left: 4rem;
+}
+
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+}
+a:hover{
+  color: rgb(153, 153, 152);
+}
+
+.navbar{
+ 
+  padding: 1rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.258);
+  margin-top: 15px;
+  border-radius: 10px;
+  
+  
+
+}
 
 
-/* HAMBURGER MENU-------------------------------------------------------------------------------------------------------------------- */
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: rgb(247, 249, 251);
+  border-radius: 1px;
   
-  .menuItem {
-    display: block;
-    margin: 2rem 4rem;
-    font-size: 1.8rem;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .menuItem:hover {
-    text-decoration: underline;
-  }
-  
-  .hamburger {
-    position: fixed;
-    z-index: 100;
-    top: 1rem;
-    right: 1rem;
-    padding: 4px;
-    border: black solid 1px;
-    background: white;
-    cursor: pointer;
-  }
-  
-  .closeIcon {
-   
-   
-  }
-  
-  .menu {
-    position: fixed;
-    transform: translateY(-100%);
-    transition: transform 0.2s;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 99;
-    background: black;
-    color: white;
-    list-style: none;
-    padding-top: 4rem;
-  }
-  
-  .showMenu {
-    transform: translateY(0);
-  }
 
-  /*        TIMER      ------------------------------------------------------------------------------------------------------------------ */
+}
+.nav-menu{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+.nav-item{
+  margin-left: 1rem;
+  font-size: x-large;
+}
+.nav-menu{
+  position: fixed;
+  left: -110%;
+  top: 10rem;
+  
+  
+  background-color: rgba(52, 47, 47, 0.626);
+  width: 100%;
+  height: 30vh;
+  text-align: center;
+  transition: 0.3s;
+  box-shadow: 10px 10px 20px rgba(97, 87, 91, 0.163);
+}
+.nav-menu.active{
+  left: 0;
+}
+.nav-item{
+  margin: 3rem 0;
+  
+}
+.hamburger{
+  display: block;
+  cursor: pointer;
+}
+.hamburger.active .bar:nth-child(2){
+  opacity: 0;
+}
+.hamburger.active .bar:nth-child(1){
+-webkit-transform: translateY(8px) rotate(45deg);
+transform:translateY(8px) rotate(45deg) ;
+}
+.hamburger.active .bar:nth-child(3){
+  -webkit-transform: translateY(-8px) rotate(-45deg);
+  transform:translateY(-8px) rotate(-45deg) ;  
+}
+@media( max-width: 514px){
+ .me p{
+  overflow: scroll;
+ }
+ .nav-menu{
+  top: 8rem;
+  flex-direction: column;
+  height: 150px;
+  overflow:scroll;
+ }
+ .nav-item{
+  margin: 0.4rem;
+ }
+
+ 
+}
+@media (max-width: 848px) {
+  .heading{
+    font-size: 2em;
+    
+  }
+ 
+}
