--- a/public/css/timer.css
+++ b/public/css/timer.css
@@ -1,194 +1,187 @@
-*{
+* {
+    font-family: "Roboto", sans-serif
+}
 
+body {
     margin: 0;
-
     padding: 0;
-
-    box-sizing: border-box;
-
-    font-family: "Roboto", sans-serif;
-    
-
-}
-body{
-    /* background-color: #000000; */
-    background: linear-gradient(to right, black 0%, black 50%, rgb(157, 0, 255) 50%, rgb(255, 238, 0) 100%);
-    /* background-image: url(bg3.jpg); */
-    background: linear-gradient( rgb(157, 0, 255) 50%, rgb(255, 238, 0) 100%);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
-
-section{
-
-    position: relative;
-
-    width: 100%;
-
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 
-    /* background: #000000; */
-
-    display: flex;
-
-    justify-content: center;
-
-    align-items: center;
 
 }
 
-.clock{
-
+.clock {
+    background-color: #000000;
     position: relative;
-
-    width: 700px;
-
-    height: 250px;
-
-    background: rgba(0, 0, 0, 0.11);
-
-    box-shadow: 0 15px 20px rgba(123, 0, 255, 0.784);
-
-    border-radius: 20px;
-
-     z-index: 1000;  
-
-    border: 1px solid rgba(255, 255, 255, 0.1);
-
-    backdrop-filter: blur(20px);
-
+    height: 100%
 }
 
-.clock .container{
-
-    display: flex;
-
-    justify-content: center;
-
-    align-items: center;
-
-    height: 100%;
-
-}
-
-.clock .container h2{
-
-    font-size: 6em;
-
-    color: #fff;
-
-}
-
-.clock .container h2:nth-child(odd){
-
-    padding: 5px 15px;
-
-    border-radius: 10px;
-
-    background: rgba(222, 78, 78, 0.727);
-
-    box-shadow: 0 15px 20px rgba(133, 236, 7, 0.61);
-
-    margin: 0 10px;
-
-    border-bottom: 1px solid rgba(255,255,255,0.1);
-
-    border-right: 1px solid rgba(255,255,255,0.1);
-
-}
-
-.clock .container h2#second{
-
-    color: #f9d924;
-
-}
-.box input{
-    position: relative;
-    width: 150px;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid #ffffff;
-    color: #ffffff;
-    background-color: transparent;
-    font-size: 32px;
-    text-align: center;
-    z-index: 35;
-}
-.box input::placeholder{
-    font-size: 18px;
-    color: #ffffff;
-    z-index: 35;
-    /* font-size: 700; */
-}
- input::-webkit-outer-spin-button, 
- input::-webkit-inner-spin-button{ 
-     -webkit-appearance: none; 
-     margin: 0; 
- }
- .box .btn{
-    position: absolute;
-    top: 65%;
-    left: 13%;
-    height: 15vh;
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.box .btn button{
-    padding: 5px 10px;
-    font-size: 20px;
-    background-color: #292828;
+h1{
     color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.5s;
+    text-align: center;
+    font-size: 3em;
 }
-.box .btn .button:hover{
-    background-color: #8e44ad;
+.clock::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 35%;
+    display: block;
+    background-image: url(https://www.gstatic.com/earth/social/00_generic_facebook-001.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0 -80px;
+  
+    
+}
 
+.container {
+    height: 65%;
+    padding: 40px 0;
+    box-sizing: border-box;
+    
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.timer__main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+    border: 2px solid white;
+    width: 29%;
+    padding: 3rem;
+    border-radius: 2rem;
+}
+
+.timer__controls {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 20px
+}
+
+.timer__controls button {
+    margin: 0 10px;
+}
+
+.timer__button {
+    width: 7rem;
+    height: 3rem;
+   border: 3px solid white;
+   border-radius: 2rem;
+   background: transparent;
+   color: white;
+   font-weight: 600;
+   font-size: medium;
+}
+#stop-sound{
+    width: 9rem;
+    height: 3rem;
 }
 
 
-    @media (max-width: 800px) {
-      nav .mainMenu {
-        height: 100vh;
-        position: fixed;
-        top: 0px;
-        right: 0px;
-        left: 0px;
-        z-index: 10;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: rgb(0, 0, 0);
-        transition: top 1s ease 0s;
-        display: none;
-      }
-      nav .mainMenu .closeMenu {
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-      }
-      nav .openMenu {
-        display: block;
-      }
-      nav .mainMenu li a:hover {
-        background: none;
-        color: rgb(255, 123, 0);
-      }
-      .icons i {
-        display: inline-block;
-        padding: 12px;
-      }
+
+.counter {
+    font-size: 1rem;
+    color: #fff
+}
+
+.hour:after {
+    content: ":";
+    color: white;
+    size: 1rem;
+}
+.minute:after {
+    content: ":";
+    color: white;
+    size: 1rem;
+}
+
+input{
+    margin: 0 10px;
+    width: 7rem;
+    height: 2rem;
+   border: 3px solid white;
+   border-radius: 0.5rem;
+   background: transparent;
+   color: white;
+   font-weight: 600;
+   font-size: medium;
+   text-align: center;
+   font-size: x-large;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(255, 255, 255, 0.501);
+    opacity: 1;
+    text-align: center;
+   /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(255, 255, 255, 0.486);
+    opacity: 1;
+    text-align: center;
+    padding-left: 0.1rem;
+  }
+
+.counter-ms {
+    color: #666
+}
+
+@media(max-width: 767px) {
+    .stopwatch:before {
+        background-position: 0 -40px
     }
+
+    .counter {
+        font-size: 64px
+    }
+}
+
+@media(max-width: 575px) {
+    .counter {
+        font-size: 60px
+    }
+}
+
+@media(max-width: 480px) {
+    .stopwatch:before {
+        background-position: center bottom 0;
+    }
+}
+.home{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    z-index: 30;
+    color: white;
+    background: transparent;
+    border: 2px solid white;
+    border-radius: 1rem;
+    display: inline-block;
+    height: 1.4rem;
+    width: 5rem;
+    text-align: center;
+    padding-top: 0.3rem;
+    font-weight: 500;
+    text-decoration: none;
+    
+}
+
