--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,9 +15,9 @@ body{
 
 .img{
   height: 100vh;
-  width: 200vw;
+  width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: last baseline;
   align-items: center;
 }
 
