--- a/public/css/stopwatch.css
+++ b/public/css/stopwatch.css
@@ -28,7 +28,7 @@ h1{
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 35%;
+    height: 50%;
     display: block;
     background-image: url(https://www.gstatic.com/earth/social/00_generic_facebook-001.jpg);
     background-size: cover;
@@ -39,6 +39,7 @@ h1{
 }
 
 .stopwatch__inner {
+    margin-top: 4rem;
     height: 65%;
     padding: 40px 0;
     box-sizing: border-box;
