--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
 }
 body{
   background-color: black;
+  overflow: hidden;
   /* background:  url(https://www.gstatic.com/earth/social/00_generic_facebook-001.jpg);
   background-repeat: no-repeat;
   background-size: cover; */
@@ -51,7 +52,7 @@ a:hover{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.258);
+  background-color: rgba(87, 126, 132, 0.197);
   margin-top: 15px;
   border-radius: 10px;
   
@@ -88,7 +89,7 @@ a:hover{
   top: 10rem;
   
   
-  background-color: rgba(52, 47, 47, 0.626);
+  background-color: rgba(75, 125, 133, 0.141);
   width: 100%;
   height: 30vh;
   text-align: center;
