--- a/public/css/timer.css
+++ b/public/css/timer.css
@@ -2,20 +2,20 @@
     font-family: "Roboto", sans-serif
 }
 
-body {
+html.body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
-
+background-color: #000000;
 
 }
 
 .clock {
     background-color: #000000;
     position: relative;
-    height: 100%
+    height: 100vh
 }
 
 h1{
@@ -28,20 +28,22 @@ h1{
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100%;
-    height: 35%;
+    width: 100vw;
+    height: 50vh;
     display: block;
     background-image: url(https://www.gstatic.com/earth/social/00_generic_facebook-001.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -80px;
+    background-size: cover;
   
     
 }
 
 .container {
+    margin: 0 auto;
     height: 65%;
-    padding: 40px 0;
+    padding: 2rem 0;
     box-sizing: border-box;
     
     position: relative;
@@ -49,6 +51,7 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
 }
 
 .timer__main {
@@ -58,7 +61,7 @@ h1{
     margin-top: 4rem;
     margin-bottom: 3rem;
     border: 2px solid white;
-    width: 29%;
+    width: 29vw;
     padding: 3rem;
     border-radius: 2rem;
 }
@@ -83,6 +86,7 @@ h1{
    color: white;
    font-weight: 600;
    font-size: medium;
+   z-index: 50;
 }
 #stop-sound{
     width: 9rem;
@@ -118,7 +122,7 @@ input{
    font-weight: 600;
    font-size: medium;
    text-align: center;
-   font-size: x-large;
+   font-size: 1.5rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -138,34 +142,90 @@ input::-webkit-inner-spin-button {
     color: rgba(255, 255, 255, 0.486);
     opacity: 1;
     text-align: center;
-    padding-left: 0.1rem;
+   
   }
 
 .counter-ms {
     color: #666
 }
 
+@media(max-width: 1536px) {
+    input{
+        width: 5rem;
+        height: 1.5rem;
+        font-size: 1em;
+    }
+
+}
+
+@media(max-width: 1204px) {
+  
+    input{
+        width: 4rem;
+        height: 1.5rem;
+        
+    }
+    .counter {
+        font-size: 0.8rem;
+    }
+    .timer__main{
+        width: 50vw;
+    }
+}
+
 @media(max-width: 767px) {
-    .stopwatch:before {
+    .timer:before {
         background-position: 0 -40px
     }
 
+   
+   
+
+    input{
+        width: 3rem;
+        height: 1.5rem;
+        
+    }
     .counter {
-        font-size: 64px
+        font-size: 0.8rem;
+    }
+    .timer__main{
+        width: 50vw;
     }
 }
 
 @media(max-width: 575px) {
-    .counter {
-        font-size: 60px
+    input{
+        width: 3rem;
+        height: 1.5rem;
+        
     }
+    .counter {
+        font-size: 0.5rem;
+    }
+    .timer__main{
+        width: 50vw;
+    }
+   
 }
 
 @media(max-width: 480px) {
-    .stopwatch:before {
+    .timer:before {
         background-position: center bottom 0;
     }
+    input{
+        width: 3rem;
+        height: 1rem;
+        
+    }
+    .counter {
+        font-size: 0.4rem;
+    }
+    .timer__main{
+        width: 80vw;
+    }
 }
+
 .home{
     position: absolute;
     top: 1rem;
