--- a/public/css/timer.css
+++ b/public/css/timer.css
@@ -36,7 +36,7 @@ h1{
     background-repeat: no-repeat;
     background-position: 0 -80px;
     background-size: cover;
-  
+  background-color: #000000;
     
 }
 
@@ -45,7 +45,7 @@ h1{
     height: 65%;
     padding: 2rem 0;
     box-sizing: border-box;
-    
+    background-color: #000000;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -215,14 +215,14 @@ input::-webkit-inner-spin-button {
     }
     input{
         width: 3rem;
-        height: 1.5rem;
+        height: 1.3rem;
         
     }
     .counter {
         font-size: 0.6rem;
     }
     .timer__main{
-        width: 69vw;
+        width: 80vw;
     }
     .timer__controls{
         width:100%;
