--- a/public/css/timer.css
+++ b/public/css/timer.css
@@ -227,6 +227,9 @@ input::-webkit-inner-spin-button {
     .timer__controls{
         width:100%;
     }
+    .clock::after{
+        background-size: 80%;
+    }
 }
 
 .home{
